Fixed Overflow Issues on Mobile Devices

--- a/style.css
+++ b/style.css
@@ -519,7 +519,8 @@ body {
     }
     
     .about-intro > p {
-        font-size: 16px;
+        font-size: 14px;
+        padding-right: 3vw;
     }
 
     .about-cards {
@@ -539,8 +540,11 @@ body {
         font-size: 24px;
     }
 
+    .about-card > i {
+        font-size: 100px;
+    }
+
     .about-skills {
-        padding-top: 20vh;
         overflow: hidden;
     }
 
